--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap"
           rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/76119f4f8b.js" crossorigin="anonymous"></script>
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="/ashion-master/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/ashion-master/css/font-awesome.min.css" type="text/css">
@@ -73,12 +75,10 @@
 <script src="/ashion-master/js/bootstrap.min.js"></script>
 <script src="/ashion-master/js/jquery.magnific-popup.min.js"></script>
 <script src="/ashion-master/js/jquery-ui.min.js"></script>
-<script src="/ashion-master/js/mixitup.js"></script>
 <script src="/ashion-master/js/jquery.countdown.min.js"></script>
 <script src="/ashion-master/js/jquery.slicknav.js"></script>
 <script src="/ashion-master/js/owl.carousel.js"></script>
 <script src="/ashion-master/js/jquery.nicescroll.min.js"></script>
 <script src="/ashion-master/js/main.js"></script>
-
 </body>
 </html>
